--- a/index.html
+++ b/index.html
@@ -16,10 +16,6 @@ layout: default
                 data-target="#webdoor_carousel"
                 data-slide-to="1">
             </li>
-            <li class=""
-                data-target="#webdoor_carousel"
-                data-slide-to="2">
-            </li>
           </ol>
 
           <!-- sliders -->
@@ -27,16 +23,16 @@ layout: default
 
             <div class="item active">
               <img src="{{ "/assets/images/webdoor_img1.jpg" | prepend: site.baseurl  }}" data-src="" alt="First slide">
-              <div class="container">
+              <!-- <div class="container">
                 <div class="carousel-caption">Teste</div>
-              </div>
+              </div>-->
             </div><!-- item -->
 
             <div class="item">
               <img src="{{ "/assets/images/webdoor_img2.jpg" | prepend: site.baseurl  }}" data-src="" alt="First slide">
-              <div class="container">
+              <!-- <div class="container">
                 <div class="carousel-caption">Teste</div>
-              </div>
+              </div>-->
             </div><!-- item -->
 
           </div>
