--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@ layout: default
   <div class="row conteudo">
     <div class="descricao col-lg-6 col-md-6">
       <h2>Sobre o projeto</h2>
-      <p>Projeto Taroni Muay Thaí Pra Todos"começou a partir de um vizinho e
-        hoje em dia um grande amigo que vendo aqueles jovens e crianças ali na
-        rua sem fazer nada o dia todo resolveu dar aula e meio sem saber foi
-        com a cara e coragem sem apoio... </p>
+      <p>O projeto Taroni Muay Thai Para Todos surgiu da iniciativa de Bruno Chacal
+        e Victor Luiz que ao observarem a quantidade de crianças e adolescentes
+        que passavam o dia pelas ruas do bairro sem fazer nenhuma atividade,
+        decidiram dar aulas oferecendo-lhes uma opção de lazer esportivo.</p>
 
       <div class="bloco-rodape">
         <a href="/sobre-o-projeto" class="right">Conheça mais sobre o projeto</a>
