Página Fotos: Clicar para Ampliar
+ plugin fancy box
+ codices de call css e js
+ ajustes na página para execução da funcionalidade

--- a/fotos-e-videos/index.html
+++ b/fotos-e-videos/index.html
@@ -16,7 +16,9 @@ weight: 500
           <div class="grid-sizer"></div>
           {% for foto in site.data.fotos %}
             <div class="grid-item" id="foto-{{foto.indice}}">
-              <img src="{{foto.arquivo}}" />
+              <a href="{{foto.arquivo}}" class="fancybox" rel="gallery">
+                <img src="{{foto.arquivo}}" />
+              </a>
             </div>
           {% endfor %}
         </div>
