Página Sobre: +Foto

--- a/sobre/index.html
+++ b/sobre/index.html
@@ -28,7 +28,7 @@ weight: 200
     </div>
 
     <div class="descricao col-lg-6 col-md-6">
-      <img src="http://placehold.it/300x600">
+      <img src="{{ "/assets/images/foto-sobre.png" | prepend: site.baseurl }}">
     </div>
 
   </div>
